--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -33,6 +33,12 @@ jobs:
         uses: actions/checkout@v3
       - name: Setup Pages
         uses: actions/configure-pages@v3
+        # Preload upload-artifact in case other actions depend on it
+      - name: Preload artifact upload action
+        uses: actions/upload-artifact@v3
+        with:
+          name: dummy
+          path: README.md # just to trigger the download of the action
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
